--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -116,7 +116,7 @@
             app:layout_constraintEnd_toStartOf="@id/right_guideline"
             app:layout_constraintStart_toEndOf="@id/btnPlay"
             app:layout_constraintTop_toBottomOf="@id/artistName"
-            app:srcCompat="@drawable/like_button" />
+            app:srcCompat="@drawable/ic_favorite_track_inactive" />
 
         <TextView
             android:id="@+id/currentTrackTime"
