--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -26,7 +26,15 @@
         android:id="@+id/mediaFragment"
         android:name="com.example.playlistmaker.media.ui.MediaFragment"
         android:label="fragment_media"
-        tools:layout="@layout/fragment_media" />
+        tools:layout="@layout/fragment_media" >
+        <action
+            android:id="@+id/action_mediaFragment_to_audioplayerActivity"
+            app:destination="@id/audioplayerActivity" >
+            <argument
+                android:name="track"
+                app:argType="com.example.playlistmaker.search.domain.model.Track" />
+        </action>
+    </fragment>
     <activity
         android:id="@+id/audioplayerActivity"
         android:name="com.example.playlistmaker.player.ui.activity.AudioplayerActivity"
