--- a/app/src/main/res/layout/favorites_item.xml
+++ b/app/src/main/res/layout/favorites_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,52 +12,73 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginVertical="8dp"
-        android:layout_marginLeft="13dp"
-        tools:src="@drawable/placeholder_artwork"
+        android:layout_marginStart="13dp"
         android:contentDescription="@null"
-        />
+        tools:src="@drawable/placeholder_artwork"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/track_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
-        android:layout_toRightOf="@+id/artwork_url_100"
         android:ellipsize="end"
-        android:maxWidth="210dp"
         android:maxLines="1"
         android:textSize="16sp"
-        tools:text="Can't Help Falling in Love" />
+        tools:text="Can't Help Falling in Love"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/artwork_url_100"
+        app:layout_constraintEnd_toStartOf="@id/arrow_icon"
+        />
 
     <TextView
         android:id="@+id/artist_name"
         style="@style/ItemSearchSubText"
-        android:layout_below="@+id/track_name"
+        android:layout_width="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_toRightOf="@+id/artwork_url_100"
         android:ellipsize="end"
-        android:maxWidth="150dp"
         android:maxLines="1"
+        app:layout_constraintEnd_toStartOf="@id/track_time"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/artwork_url_100"
+        app:layout_constraintTop_toBottomOf="@id/track_name"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintWidth_max="wrap"
+        app:layout_goneMarginEnd="0dp"
         tools:text="Elvis Presley" />
 
     <TextView
         android:id="@+id/track_time"
         style="@style/ItemSearchSubText"
-        android:layout_below="@+id/track_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_toRightOf="@+id/artist_name"
         android:drawablePadding="5dp"
         app:drawableStartCompat="@drawable/ic_ellipse"
+        app:layout_constraintEnd_toStartOf="@id/arrow_icon"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/artist_name"
+        app:layout_constraintTop_toBottomOf="@id/track_name"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintWidth_max="wrap"
+        app:layout_goneMarginStart="0dp"
         tools:text="7:77" />
 
     <ImageView
+        android:id="@+id/arrow_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_arrow_right" />
-</RelativeLayout>
+        android:src="@drawable/ic_arrow_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
