--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:visibility="visible"
+    android:paddingBottom="56dp"
     tools:context=".search.ui.SearchFragment"
     tools:visibility="visible">
 
