--- a/app/src/main/res/layout/fragment_playlist_collection.xml
+++ b/app/src/main/res/layout/fragment_playlist_collection.xml
@@ -19,32 +19,30 @@
         android:layout_marginTop="24dp"
         android:text="@string/new_playlist" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/empty_state_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
+            android:id="@+id/header_top_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="130dp" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/no_playlists_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintTop_toBottomOf="@id/header_top_guideline"
             app:srcCompat="@drawable/empty_search_placeholder"
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/no_playlists_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -54,7 +52,7 @@
             android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/no_playlists_image_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -63,6 +61,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:paddingHorizontal="8dp"
-        android:paddingBottom="56dp"
-        />
+        android:paddingBottom="56dp" />
 </LinearLayout>
