--- a/app/src/main/res/layout/fragment_edit_playlist.xml
+++ b/app/src/main/res/layout/fragment_edit_playlist.xml
@@ -157,6 +157,16 @@
             android:layout_marginTop="8dp"
             android:background="@color/yp_light_gray" />
 
+        <TextView
+            android:id="@+id/empty_playlist_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:text="@string/there_are_no_tracks"
+            android:textColor="@color/yp_black"
+            android:visibility="gone" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_of_tracks_in_playlist"
